<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contextBottomSheet"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:background="#FFF"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="vertical"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:id="@+id/renameLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_title_black_24px"
                android:tint="@color/grey_700"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rename_menu_string"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:paddingLeft="32dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:id="@+id/deleteLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp"
                android:tint="@color/grey_700"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_menu_string"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:paddingLeft="32dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:id="@+id/shareLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"
                android:tint="@color/grey_700"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_menu_string"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:paddingLeft="32dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>